--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.2",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
